infraestructure/k8s/parcel-sre-challenge-development/parcel-sre-challenge.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: parcel-sre-challenge
  name: parcel-sre-challenge-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parcel-sre-challenge
  template:
    metadata:
      labels:
        app: parcel-sre-challenge
    spec:
      containers:
        - image: romerenr/parcel-sre-challenge:latest
          name: parcel-sre-challenge
          ports:
            - containerPort: 8080
