infraestructure/k8s/parcel-sre-challenge-development/parcel-sre-challenge-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parcel-sre-challenge
  name: parcel-sre-challenge-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: parcel-sre-challenge
