infraestructure/k8s/parcel-sre-challenge-development/parcel-sre-challenge-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parcel-sre-challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /greeting/$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: parcel-sre-challenge
                port:
                  number: 80
            path: /greeting/(.*)
            pathType: Prefix
